--- a/style/style.scss
+++ b/style/style.scss
@@ -1,31 +1,28 @@
-.order {
-  display: flex;
-  flex-direction: column;
+label {
+  display: block;
+  margin-top: 10px;
 }
-.block-order {
-  border-radius: 15px;
-  background-color: cadetblue;
-  padding: 135px;
-  width: 500px;
+
+textarea {
+  width: 100%;
+  height: 100px;
 }
-.title-h {
-  background: rgb(186, 238, 240);
-  color: #686868;
-  padding: 15px;
-  border-radius: 15px;
+
+button {
+  margin-top: 10px;
+  cursor: pointer;
 }
-.style-tnput {
-  padding: 8px 15px;
-  border-radius: 15px;
-  border: 3px solid #686868;
+
+ul {
+  list-style-type: none;
+  padding: 0;
 }
-.style-btn {
-  margin: 15px;
-  padding: 10px;
-  border-radius: 15px;
+
+li {
+  cursor: pointer;
+  margin-bottom: 5px;
 }
-.ul-order {
-  padding: 10px 25px;
-  border-radius: 15px;
-  background: rgba(186, 238, 240, 0.678);
+
+#reviewsContainer {
+  margin-top: 20px;
 }
